--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,13 @@
 @import './Layout/cover';
 @import './Layout/intro';
 @import './Layout/courses';
+@import './Layout/services';
+@import './Layout/students';
+@import './Layout/banner';
+@import './Layout/categories';
+@import './Layout/companies';
+@import './Layout/comment';
+@import './Layout/footer'
 
 //Page
 
