--- a/css/main.css
+++ b/css/main.css
@@ -231,6 +231,17 @@ header {
   background-color: #ec5252;
 }
 
+@media screen and (max-width: 768px) {
+  .udeCarousel .form .input-group {
+    width: 300px;
+  }
+  .udeCarousel h1 {
+    color: #fff;
+    font-size: 24px;
+    font-weight: normal;
+  }
+}
+
 .intro {
   background: linear-gradient(to right, #521822, #ec5252);
 }
@@ -263,13 +274,37 @@ header {
   font-weight: normal;
 }
 
+@media screen and (max-width: 768px) {
+  .intro {
+    display: none;
+  }
+}
+
 .courses .course__content {
   padding-top: 4rem;
 }
 
-.courses .course__content .course__intro h2 {
-  color: 15px;
-  font-size: #29303b;
+.courses .course__content .course__intro {
+  background: #f7f8fa;
+  display: flex;
+  flex: 1 0 auto;
+  flex-direction: column;
+  justify-content: center;
+  margin: 15px 15px 28px 0;
+  max-width: calc(216px + 15px);
+  padding: 0 32px;
+  max-width: 30%;
+}
+
+.courses .course__content .course__intro .title {
+  color: #29303b;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.courses .course__content .course__intro p {
+  color: #29303b;
+  font-size: 15px;
   font-weight: normal;
 }
 
@@ -345,5 +380,430 @@ header {
   color: #29303b;
   font-size: 15px;
   font-weight: bold;
+}
+
+@media screen and (max-width: 1200px) {
+  .courses .myTab .course__last--2 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .courses .myTab .course__last--1 {
+    display: none;
+  }
+}
+
+.services {
+  background: #f2f3f5;
+  padding: 24px 0;
+}
+
+.services .slick-list {
+  margin-left: 5%;
+}
+
+.services .slick-list .services__item {
+  width: 335px !important;
+  padding-right: 0;
+  text-align: left;
+}
+
+.services .slick-list .services__item .services__ico img {
+  margin: 0 auto;
+}
+
+.services .slick-list .services__item h4 {
+  color: #29303b;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.services .slick-list .services__item p {
+  color: #686f7a;
+  font-size: 15px;
+  font-weight: normal;
+}
+
+.services .slick-list .services__item .row {
+  background: #fff;
+  margin-right: 16px;
+  padding: 24px;
+}
+
+.services .slick-list .services__item:focus {
+  outline: none;
+}
+
+@media screen and (max-width: 992px) {
+  .services .slick-list .services__item {
+    text-align: center;
+    width: auto;
+  }
+}
+
+.students {
+  padding: 20px;
+}
+
+.students h2 {
+  color: #29303b;
+  font-size: 20px;
+  font-weight: normal;
+}
+
+.students .students__items .owl-item {
+  margin-bottom: 5px;
+}
+
+.students .students__items .card {
+  box-shadow: 0 2.5px rgba(0, 0, 0, 0.1);
+}
+
+.students .students__items .card .card-img {
+  position: relative;
+}
+
+.students .students__items .card .card-img-top {
+  border-bottom: 1px solid rgba(41, 48, 59, 0.1);
+}
+
+.students .students__items .card .card-title {
+  color: #29303b;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.students .students__items .card .card-text {
+  color: #686f7a;
+  font-size: 13px;
+  font-weight: normal;
+}
+
+.students .students__items .card .rating {
+  display: flex;
+}
+
+.students .students__items .card .rating .rating__star {
+  color: #F4C150;
+  font-size: 13px;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.students .students__items .card .rating span:nth-child(2) {
+  color: #686f7a;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.students .students__items .card .rating span:last-child {
+  color: #686f7a;
+  font-size: 13px;
+  font-weight: normal;
+}
+
+.students .students__items .card .price {
+  text-align: right;
+}
+
+.students .students__items .card .price .old-price {
+  color: #686f7a;
+  font-size: 13px;
+  font-weight: normal;
+  text-decoration: line-through;
+}
+
+.students .students__items .card .price .new-price {
+  color: #29303b;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.students .students__items .card:hover {
+  box-shadow: 4px 8px 4px 0 rgba(0, 0, 0, 0.1);
+}
+
+.students .students__items .card:hover .card-img_bg {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.banner {
+  background: #29303b;
+  padding: 2rem 2rem;
+}
+
+.banner .banner__90 {
+  width: 95%;
+  margin: 0 auto;
+}
+
+.banner .banner__90 .banner__top, .banner .banner__90 .banner__bottom {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  text-align: center;
+  margin-bottom: 32px;
+  margin-top: 48px;
+}
+
+.banner .banner__90 .banner__top .banner__ico, .banner .banner__90 .banner__bottom .banner__ico {
+  color: #fff;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.banner .banner__90 .banner__midle {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+}
+
+.banner .banner__90 .banner__midle .banner__ico {
+  color: #fff;
+  font-size: 32px;
+  font-weight: 700;
+  align-self: center;
+}
+
+.banner .banner__90 .banner__midle .banner__content .banner__title {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.banner .banner__90 .banner__midle .banner__content .banner__sub {
+  color: #fff;
+  font-size: 15px;
+  font-weight: normal;
+  margin-bottom: 25px;
+}
+
+.banner .banner__90 .banner__midle .banner__content .banner__btn .btn {
+  background-color: #ec5252;
+  border: none;
+  display: inline-block;
+  color: #fff;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 11px 12px;
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 1200px) {
+  .banner .banner__90 .banner__ico {
+    display: none;
+  }
+  .banner .banner__90 .banner__midle {
+    display: inline;
+  }
+}
+
+.categories .container .title {
+  color: #29303b;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.categories .container .row .cate__i {
+  margin-bottom: 20px;
+}
+
+.categories .container .row .cate__i .categories__item {
+  width: 95%;
+  background: #fff;
+  box-shadow: 0 1px 3px 0 rgba(20, 23, 28, 0.15);
+  padding: 20px;
+}
+
+.categories .container .row .cate__i .categories__item a {
+  color: #29303b;
+  font-size: 15px;
+  text-decoration: none;
+}
+
+.categories .container .row .cate__i .categories__item a i {
+  margin-right: 10px;
+}
+
+.companies {
+  background-color: #f2f3f5;
+  text-align: center;
+}
+
+.companies p {
+  color: #686f7a;
+  font-size: 14px;
+}
+
+.companies span {
+  margin: 40px 0;
+}
+
+.companies span img {
+  padding: 20px 30px;
+  font-size: 20px;
+}
+
+.companies .container .cpa__i {
+  margin: 35px 0;
+}
+
+.companies .container .cpa__i .companies__item {
+  margin-left: 50px;
+}
+
+.companies .container .cpa__i .companies__item h3 {
+  font-size: 18px;
+  font-weight: 900;
+  line-height: 1.47em;
+  color: #505763;
+}
+
+.companies .container .cpa__i .companies__item p {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1.5em;
+  padding-top: 3px;
+  color: #29303b;
+}
+
+.companies .container .cpa__i .companies__item button {
+  background-color: #ec5252;
+  color: #fff;
+  border: 1px solid transparent;
+  font-weight: 700;
+  padding: 10px 10px;
+  font-size: 16px;
+  border-radius: 2px;
+}
+
+.companies .container .cpa__i .companies__item button:hover {
+  background-color: #992337;
+  border-color: transparent;
+}
+
+.companies .container .cpa__i .companies__item button:focus {
+  outline: none;
+}
+
+.comments {
+  background-color: #f2f3f5;
+}
+
+.comments .container {
+  width: 1300px;
+}
+
+.comments .row {
+  margin-bottom: 30px;
+}
+
+.comments .row .cmt__item .user__content {
+  height: 100%;
+  background-color: #fff;
+  box-shadow: 0 1px 3px 0 rgba(20, 23, 28, 0.15);
+}
+
+.comments .row .cmt__item .user__content .user__comments a {
+  text-decoration: none;
+  color: #000;
+  font-weight: bolder;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.comments .row .cmt__item .user__content .user__comments a img {
+  margin-right: 10px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+
+.comments .row .cmt__item .user__content p {
+  margin: 20px 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5em;
+  margin-right: 2 0px;
+}
+
+footer .container__fluid .footer__top {
+  margin: 50px 5px;
+}
+
+footer .container__fluid .footer__top .foo_i .footer__item ul {
+  list-style: none;
+}
+
+footer .container__fluid .footer__top .foo_i .footer__item ul li {
+  margin: 10px;
+  color: #007791;
+  background-color: transparent;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+footer .container__fluid .footer__top .foo_i .footer__item ul li:hover {
+  color: #003845;
+}
+
+footer .container__fluid .footer__top .foo_i .btn-group {
+  float: right;
+}
+
+footer .container__fluid .footer__top .foo_i .btn-group .btn {
+  background-color: #fff;
+  border: 1px solid #686f7a;
+  border-radius: 2px;
+  padding: 10px 20px;
+}
+
+footer .container__fluid .footer__top .foo_i .btn-group .btn i {
+  color: #686f7a;
+}
+
+footer .container__fluid .footer__top .foo_i .btn-group .btn a {
+  margin-right: 40px;
+  color: #686f7a;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  footer .container__fluid .footer__top .foo_i .btn-group {
+    float: left;
+  }
+}
+
+footer .container__fluid .footer__bottom {
+  border-bottom: 6px solid #ec5252;
+}
+
+footer .container__fluid .footer__bottom .col-6 img {
+  width: 100px;
+  height: 50px;
+  margin: 20px;
+}
+
+footer .container__fluid .footer__bottom .col-6 a {
+  color: #686f7a;
+  font-size: 14px;
+}
+
+footer .container__fluid .footer__bottom .col-6 .footer__right {
+  float: right;
+  margin-top: 35px;
+  text-decoration: none;
+}
+
+footer .container__fluid .footer__bottom .col-6 .footer__right a {
+  color: #007791;
+  background-color: transparent;
+  font-weight: 400;
+  margin: 0 10px;
 }
 /*# sourceMappingURL=main.css.map */
